deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-booking-cancellation-prediction
