deploy/k8s/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-booking-cancellation-prediction-api-canary
  namespace: hotel-booking-cancellation-prediction
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: hotel-booking-cancellation-prediction.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel-booking-cancellation-prediction-api-canary
                port:
                  number: 80
